WIP: more osdf-origin-public: add config file for extra exports
Took out the template from _helpers.tpl, it was just giving me errors

--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -25,7 +25,14 @@ spec:
       volumes:
       - name: xcache-namespace
         persistentVolumeClaim:
-          claimName: {{ .Values.Origin.DataVolume }}
+          claimName: {{ .Values.Origin.MainExport.DataVolume }}
+      {{ if .Values.Origin.ExtraExports }}
+      {{- range .Values.Origin.ExtraExports }}
+      - name: {{ .Name }}
+        persistentVolumeClaim:
+          claimName: {{ .DataVolume }}
+      {{- end }}
+      {{ end }}
 
       {{ if .Values.HostCredentials.HostCertKeySecret }}
       - name: hostcertkey
@@ -52,7 +59,7 @@ spec:
           - name: XC_ROOTDIR
             value: "/xcache/namespace"
           - name: XC_ORIGINEXPORT
-            value: "{{ .Values.Origin.MainExport }}"
+            value: "{{ .Values.Origin.MainExport.Namespace }}"
 
           resources:
             requests:
