Don't allow specifying the image; allow specifying either harbor or dockerhub as the registry

--- a/supported/opensciencegrid/osdf-origin/values.yaml
+++ b/supported/opensciencegrid/osdf-origin/values.yaml
@@ -37,7 +37,10 @@ Resources:
 
 Containers:
   Origin:
-    Image: opensciencegrid/stash-origin:3.6-release
+    # "docker.io" and "hub.opensciencegrid.org" are the allowed registries.
+    Registry: "hub.opensciencegrid.org"
+    # The tag to pull; the image is "opensciencegrid/stash-origin"
+    Tag: 3.6-release
     ImagePullPolicy: Always
 
 ### SLATE-START ###
