--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -49,7 +49,13 @@ spec:
 
       containers:
         - name: origin
-          image: "{{ .Values.Containers.Origin.Image }}"
+        {{ if or (empty .Values.Containers.Origin.Registry) (eq .Values.Containers.Origin.Registry "hub.opensciencegrid.org") }}
+          image: "hub.opensciencegrid.org/opensciencegrid/stash-origin:{{ .Values.Containers.Origin.Tag }}"
+        {{ else if eq .Values.Containers.Origin.Registry "docker.io" }}
+          image: "docker.io/opensciencegrid/stash-origin:{{ .Values.Containers.Origin.Tag }}"
+        {{ else }}
+          {{ fail "Only the 'hub.opensciencegrid.org' and 'docker.io' container registries are allowed" }}
+        {{ end }}
           imagePullPolicy: {{ .Values.Containers.Origin.ImagePullPolicy }}
           env:
           - name: XC_RESOURCENAME
