--- a/supported/opensciencegrid/osdf-origin/Chart.yaml
+++ b/supported/opensciencegrid/osdf-origin/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-name: osdf-origin-public
+name: osdf-origin
 # Chart version
 version: 0.1
-description: OSDF origin serving public data
-# Version of application packaged for installation
-appVersion: "v5.5.0-rc1"
+description: OSDF origin 
+# Version of application packaged for installation; this should be the version of the xcache RPM
+appVersion: "v3.1.0"
 #home: https://opensciencegrid.org/docs/data/stashcache/overview/
