--- a/supported/opensciencegrid/osdf-origin/templates/configmap.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/configmap.yaml
@@ -1,4 +1,3 @@
-{{ if .Values.Origin.ExtraExports }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,22 +7,16 @@ metadata:
     release: {{ .Release.Name }}
     instance: {{ .Values.Instance | quote }}
 data:
-  extra_exports_cfg: |-
-    {{ if .Values.PublicExports.ExtraExports -}}
+  # The first public or auth origin export is declared in the environment;
+  # the rest are in a config file.
+  extra_exports.cfg: |-
     if named stash-origin
-    {{ range .Values.PublicExports.ExtraExports -}}
-    {{ printf "  # Extra export %s, volume %s" .Name .DataVolume }}
-    {{ printf "  all.export %s\n" .Namespace }}
+    {{ range (rest .Values.PublicOrigin.Exports) -}}
+      all.export {{ . }}
     {{ end }}
     fi
-    {{ end }}
-    {{ if .Values.AuthExports.ExtraExports -}}
     if named stash-origin-auth
-    {{ range .Values.AuthExports.ExtraExports -}}
-    {{ printf "  # Extra export %s, volume %s" .Name .DataVolume }}
-    {{ printf "  all.export %s\n" .Namespace }}
+    {{ range (rest .Values.AuthOrigin.Exports) -}}
+      all.export {{ . }}
     {{ end }}
     fi
-    {{ end }}
-{{ end }}
-
