--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -1,44 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "osdf-origin-public.fullname" . }}
+  name: {{ template "osdf-origin.fullname" . }}
   labels:
-    app: {{ template "osdf-origin-public.name" . }}
+    app: {{ template "osdf-origin.name" . }}
     release: {{ .Release.Name }}
     instance: {{ .Values.Instance | quote }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ template "osdf-origin-public.name" . }}
+      app: {{ template "osdf-origin.name" . }}
       release: {{ .Release.Name }}
       instance: {{ .Values.Instance | quote }}
 
   template:
     metadata:
       labels:
-        app: {{ template "osdf-origin-public.name" . }}
+        app: {{ template "osdf-origin.name" . }}
         release: {{ .Release.Name }}
         instance: {{ .Values.Instance | quote }}
 
     spec:
       volumes:
-      - name: xcache-namespace
-        persistentVolumeClaim:
-          claimName: {{ .Values.PublicExports.MainExport.DataVolume }}
-      {{ if .Values.PublicExports.ExtraExports }}
-      {{- range .Values.PublicExports.ExtraExports }}
+      {{ range .Values.DataVolumes }}
       - name: {{ .Name }}
         persistentVolumeClaim:
-          claimName: {{ .DataVolume }}
-      {{- end }}
-      {{ end }}
-      {{ if .Values.AuthExports.ExtraExports }}
-      {{- range .Values.AuthExports.ExtraExports }}
-      - name: {{ .Name }}
-        persistentVolumeClaim:
-          claimName: {{ .DataVolume }}
-      {{- end }}
+          claimName: {{ .ClaimName }}
       {{ end }}
 
       {{ if .Values.HostCredentials.HostCertKeySecret }}
@@ -71,16 +59,17 @@ spec:
             value: "{{ .Values.Topology.FQDN }}"
           - name: XC_ROOTDIR
             value: "/xcache/namespace"
-        {{ if .Values.PublicExports.MainExport.Namespace }}
+        {{ /* The first export is in the environment; subsequent exports go in extra_exports.cfg */ }}
+        {{ if .Values.PublicExports }}
           - name: XC_PUBLIC_ORIGIN_EXPORT
-            value: "{{ .Values.PublicExports.MainExport.Namespace }}"
+            value: "{{ .Values.PublicExports[0] }}"
           # for image versions that don't support XC_PUBLIC_ORIGIN_EXPORT
           - name: XC_ORIGINEXPORT
-            value: "{{ .Values.PublicExports.MainExport.Namespace }}"
+            value: "{{ .Values.PublicExports[0] }}"
         {{ end }}
-        {{ if .Values.AuthExports.MainExport.Namespace }}
+        {{ if .Values.AuthExports }}
           - name: XC_AUTH_ORIGIN_EXPORT
-            value: "{{ .Values.AuthExports.MainExport.Namespace }}"
+            value: "{{ .Values.AuthExports[0] }}"
         {{ end }}
 
           resources:
@@ -92,17 +81,29 @@ spec:
               memory: "{{ .Values.Resources.Memory }}"
           livenessProbe:
             tcpSocket:
+              {{ if .Values.AuthOrigin.Enabled }}
+              port: 1095
+              {{ else if .Values.PublicOrigin.Enabled }}
               port: 1094
+              {{ end }}
             initialDelaySeconds: 600
             periodSeconds: 60
           ports:
+            {{ if .Values.AuthOrigin.Enabled }}
+            - containerPort: 1095
+              hostPort: 1095
+              protocol: TCP
+            {{ end }}
+            {{ if .Values.PublicOrigin.Enabled }}
             - containerPort: 1094
               hostPort: 1094
               protocol: TCP
+            {{ end }}
           volumeMounts:
-          # TODO Handle multiple exports
-            - mountPath: /xcache/namespace
-              name: xcache-namespace
+            {{ range .Values.DataVolumes }}
+            - mountPath: {{ .MountPath }}
+              name: {{ .Name }}
+            {{ end }}
             {{ if .Values.HostCredentials.HostCertKeySecret }}
             - mountPath: /etc/grid-security/hostcert.pem
               name: hostcertkey
