--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -23,13 +23,13 @@ spec:
 
     spec:
       volumes:
-      {{ range .Values.DataVolumes }}
+      {{- range .Values.DataVolumes }}
       - name: {{ .Name }}
         persistentVolumeClaim:
           claimName: {{ .ClaimName }}
-      {{ end }}
+      {{- end }}
 
-      {{ if .Values.HostCredentials.HostCertKeySecret }}
+      {{- if .Values.HostCredentials.HostCertKeySecret }}
       - name: hostcertkey
         secret:
           secretName: {{ .Values.HostCredentials.HostCertKeySecret }}
@@ -40,20 +40,20 @@ spec:
           - key: tls.key
             path: hostkey.pem
             mode: 0o400
-      {{ end }}
+      {{- end }}
       - name: extra-exports-cfg
         configMap:
           name: {{ template "osdf-origin.fullname" . }}
 
       containers:
         - name: origin
-        {{ if or (empty .Values.Containers.Origin.Registry) (eq .Values.Containers.Origin.Registry "hub.opensciencegrid.org") }}
+        {{- if or (empty .Values.Containers.Origin.Registry) (eq .Values.Containers.Origin.Registry "hub.opensciencegrid.org") }}
           image: "hub.opensciencegrid.org/opensciencegrid/stash-origin:{{ .Values.Containers.Origin.Tag }}"
-        {{ else if eq .Values.Containers.Origin.Registry "docker.io" }}
+        {{- else if eq .Values.Containers.Origin.Registry "docker.io" }}
           image: "docker.io/opensciencegrid/stash-origin:{{ .Values.Containers.Origin.Tag }}"
-        {{ else }}
+        {{- else }}
           {{ fail "Only the 'hub.opensciencegrid.org' and 'docker.io' container registries are allowed" }}
-        {{ end }}
+        {{- end }}
           imagePullPolicy: {{ .Values.Containers.Origin.ImagePullPolicy }}
           env:
           - name: XC_RESOURCENAME
@@ -62,17 +62,17 @@ spec:
             value: "{{ .Values.Topology.FQDN }}"
           - name: XC_ROOTDIR
             value: "/xcache/namespace"
-        {{ if .Values.PublicExports }}
+        {{- if .Values.PublicOrigin.Exports }}
           - name: XC_PUBLIC_ORIGIN_EXPORT
-            value: "{{ first .Values.PublicExports }}"
+            value: "{{ first .Values.PublicOrigin.Exports }}"
           # for image versions that don't support XC_PUBLIC_ORIGIN_EXPORT
           - name: XC_ORIGINEXPORT
-            value: "{{ first .Values.PublicExports }}"
-        {{ end }}
-        {{ if .Values.AuthExports }}
+            value: "{{ first .Values.PublicOrigin.Exports }}"
+        {{- end }}
+        {{- if .Values.AuthOrigin.Exports }}
           - name: XC_AUTH_ORIGIN_EXPORT
-            value: "{{ first .Values.AuthExports }}"
-        {{ end }}
+            value: "{{ first .Values.AuthOrigin.Exports }}"
+        {{- end }}
 
           resources:
             requests:
@@ -83,30 +83,30 @@ spec:
               memory: "{{ .Values.Resources.Memory }}"
           livenessProbe:
             tcpSocket:
-              {{ if .Values.AuthOrigin.Enabled }}
+              {{- if .Values.AuthOrigin.Enabled }}
               port: 1095
-              {{ else if .Values.PublicOrigin.Enabled }}
+              {{- else if .Values.PublicOrigin.Enabled }}
               port: 1094
-              {{ end }}
+              {{- end }}
             initialDelaySeconds: 600
             periodSeconds: 60
           ports:
-            {{ if .Values.AuthOrigin.Enabled }}
+            {{- if .Values.AuthOrigin.Enabled }}
             - containerPort: 1095
               hostPort: 1095
               protocol: TCP
-            {{ end }}
-            {{ if .Values.PublicOrigin.Enabled }}
+            {{- end }}
+            {{- if .Values.PublicOrigin.Enabled }}
             - containerPort: 1094
               hostPort: 1094
               protocol: TCP
-            {{ end }}
+            {{- end }}
           volumeMounts:
-            {{ range .Values.DataVolumes }}
+            {{- range .Values.DataVolumes }}
             - mountPath: /xcache/namespace{{ .MountPath }}
               name: {{ .Name }}
             {{ end }}
-            {{ if .Values.HostCredentials.HostCertKeySecret }}
+            {{- if .Values.HostCredentials.HostCertKeySecret }}
             - mountPath: /etc/grid-security/hostcert.pem
               name: hostcertkey
               subPath: tls.crt
