--- a/supported/opensciencegrid/osdf-origin/values.yaml
+++ b/supported/opensciencegrid/osdf-origin/values.yaml
@@ -26,7 +26,9 @@ DataVolumes:
   # All MountPaths are relative to /xcache/namespace
   - Name: "xcache-namespace"
     MountPath: "/"
-    ClaimName: "osdf-origin-data"
+    # Choose one:
+    #ClaimName: "osdf-origin-data"
+    #HostPath: "/mnt/stash/origin-data"
 
 # Host Certificate and Key
 # TODO Implement Let's Encrypt support
