Add hostname for DNS (is this OK to always do or should I add a toggle?)

--- a/supported/opensciencegrid/osdf-origin/templates/service.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/service.yaml
@@ -6,6 +6,8 @@ metadata:
     app: {{ template "osdf-origin.name" . }}
     release: {{ .Release.Name }}
     instance: {{ .Values.Instance | quote }}
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.Topology.FQDN }}
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
