--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -76,14 +76,8 @@ spec:
             value: "{{ .Values.topologyFQDN }}"
           - name: XC_ROOTDIR
             value: "/xcache/namespace"
-        {{- if .Values.publicOrigin.exports }}
-          - name: XC_PUBLIC_ORIGIN_EXPORT
-            value: "{{ first .Values.publicOrigin.exports }}"
-        {{- end }}
-        {{- if .Values.authOrigin.Exports }}
-          - name: XC_AUTH_ORIGIN_EXPORT
-            value: "{{ first .Values.authOrigin.exports }}"
-        {{- end }}
+          # Note: we do not definite XC_PUBLIC_ORIGIN_EXPORT or XC_AUTH_ORIGIN_EXPORT
+          # We do the exports in the configmap instead.
 
           {{- if .Values.resources }}
           resources:
@@ -122,9 +116,9 @@ spec:
               name: hostcertkey
               subPath: hostkey.pem
             {{ end }}
-            - mountPath: /etc/xrootd/config.d/extra_exports.cfg
+            - mountPath: /etc/xrootd/config.d/exports.cfg
               name: config
-              subPath: extra_exports.cfg
+              subPath: exports.cfg
             {{- if .Values.publicOrigin.authfileLocal }}
             - mountPath: /run/stash-origin/Authfile.local
               name: config
