--- a/supported/opensciencegrid/osdf-origin/values.yaml
+++ b/supported/opensciencegrid/osdf-origin/values.yaml
@@ -36,6 +36,10 @@ authOrigin:
   # scitokensConfLocal: |-
   #   ...
 
+
+livenessProbeEnabled: true
+
+
 dataVolumes:
   # All MountPaths are relative to /xcache/namespace
   - name: "xcache-namespace"
