--- a/supported/opensciencegrid/osdf-origin/templates/configmap.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/configmap.yaml
@@ -9,20 +9,24 @@ metadata:
 data:
   # The first public or auth origin export is declared in the environment;
   # the rest are in a config file.
-  exports.cfg: |
-    {{ if .Values.publicOrigin.enabled -}}
+  extra_exports.cfg: |
+    {{ if rest .Values.publicOrigin.exports -}}
     if named stash-origin
-    {{ range .Values.publicOrigin.exports }}
+    {{ range (rest .Values.publicOrigin.exports) -}}
       all.export {{ . }}
     {{ end }}
     fi
+    {{- else -}}
+    # No extra public exports given
     {{- end }}
-    {{ if .Values.authOrigin.enabled -}}
+    {{ if rest .Values.authOrigin.exports -}}
     if named stash-origin-auth
-    {{ range .Values.authOrigin.exports }}
+    {{ range (rest .Values.authOrigin.exports) -}}
       all.export {{ . }}
     {{ end }}
     fi
+    {{- else -}}
+    # No extra auth exports given
     {{- end }}
 
   {{ if .Values.publicOrigin.authfileLocal -}}
