Allow specifying nodeName

--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -15,7 +15,9 @@ spec:
       app: {{ template "osdf-origin.name" . }}
       release: {{ .Release.Name }}
       instance: {{ .Values.Instance | quote }}
-
+  {{- if .Values.nodeName }}
+  nodeName: {{ .Values.nodeName }}
+  {{- end }}
   template:
     metadata:
       labels:
