--- a/supported/opensciencegrid/osdf-origin/values.yaml
+++ b/supported/opensciencegrid/osdf-origin/values.yaml
@@ -5,6 +5,8 @@ Instance: ""
 nameOverride: ""
 fullnameOverride: ""
 
+nodeName: null
+
 topologyResourceName: "TestOrigin"
 topologyFQDN: "testorigin.example.net"
 
